[package]
name = "ldap-proxy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# ldap3_proto = { path = "../ldap3/proto" }
# ldap3_proto = { git = "https://github.com/kanidm/ldap3.git", rev = "6dc9f4398fc79ff42c8c47838d2806d4f74425d1" }
# haproxy-protocol = { git = "https://github.com/kanidm/haproxy-protocol.git", rev = "f9f94e2a58f52a0c6099260930b6f1db213aef69" }

[dependencies]
concread = "^0.5.5"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "^0.3.31", features = ["sink"] }
haproxy-protocol = { version = "0.0.1", features = ["tokio"] }
hashbrown = { version = "0.15", features = ["serde"] }
ldap3_proto = { version = "0.6.0", features = ["serde"] }
mimalloc = "0.1.46"
openssl = "^0.10.72"
serde = { version = "^1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["macros"] }
tokio = { version = "^1.44.2", features = ["rt", "rt-multi-thread", "macros", "net", "signal", "io-util"] }
tokio-util = { version = "^0.7.14", features = ["codec"] }
tokio-openssl = "^0.6.5"
toml = "^0.8.20"
tracing = { version = "^0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-forest = { version = "0.1.6", features = ["chrono", "smallvec", "tokio"] }
url = { version = "^2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde"] }

