[package]
name = "ldap-proxy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# ldap3_proto = { path = "../ldap3/proto" }
# ldap3_proto = { git = "https://github.com/kanidm/ldap3.git", rev = "6dc9f4398fc79ff42c8c47838d2806d4f74425d1" }
# haproxy-protocol = { git = "https://github.com/kanidm/haproxy-protocol.git", rev = "f9f94e2a58f52a0c6099260930b6f1db213aef69" }

[dependencies]
concread = "^0.5.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "^0.3.32", features = ["sink"] }
haproxy-protocol = { version = "0.0.4", features = ["tokio"] }
hashbrown = { version = "0.16", features = ["serde"] }
ldap3_proto = { version = "0.6.2", features = ["serde"] }
mimalloc = "0.1.48"
openssl = "^0.10.75"
serde = { version = "^1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["macros"] }
tokio = { version = "^1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "signal", "io-util"] }
tokio-util = { version = "^0.7.18", features = ["codec"] }
tokio-openssl = "^0.6.5"
toml = "^1.0.3"
tracing = { version = "^0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
tracing-forest = { version = "0.3.1", features = ["chrono", "smallvec", "tokio"] }
url = { version = "^2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["serde"] }

